--- a/src/map/style.scss
+++ b/src/map/style.scss
@@ -5,10 +5,10 @@
  * Replace them with your own styles or keep the empty file.
  */
 
-.wp-block-sunflower-map-points-map {
+.map-container {
 
 	.leaflet-popup-content label,
-	.leaflet-popup-content input[name="name"] {
+	.leaflet-popup-content input {
 		width: 100%;
 	}
 
