--- a/src/map/style.scss
+++ b/src/map/style.scss
@@ -16,4 +16,20 @@
 		width: 260px;
 	}
 
+	.fa-solid {
+		color: #005437;
+		background-color: #fff;
+		border: 1px solid #005437;
+		border-radius: 2rem;
+		padding: 4px 6px;
+
+		&.fa-2x::before {
+			font-size: 90%;
+		}
+
+		&.fa-bicycle {
+			padding: 6px 5px;
+
+		}
+	}
 }
